--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+Compile
+=======
+
+	sudo apt install intltool pkg-config libglib2.0-dev libgtk-3-dev libgtksourceview-3.0-dev libpeas-dev gsettings-desktop-schemas-dev itstool
+	./configure --disable-updater --disable-spell
+
 General Information
 ===================
 
